traduccions ja inclos

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -1,68 +1,166 @@
 {
-  "A fresh verification link has been sent to your email address.": "新しい確認リンクを送りました。",
-  "All rights reserved.": "",
-  "Before proceeding, please check your email for a verification link.": "次に進む前に、確認リンクのメールをチェックしてください。",
-  "click here to request another": "ここをクリックしてメールを再送信してください。",
-  "Confirm Password": "パスワード（確認用）",
-  "E-Mail Address": "メールアドレス",
-  "Error": "エラー",
-  "Forbidden": "禁止されています",
-  "Forgot Your Password?": "パスワードを忘れた方はこちら",
-  "Go Home": "ホームへ",
-  "Hello!": "こんにちは",
-  "hi": "こんにちは",
-  "If you did not create an account, no further action is required.": "アカウントの作成にお心当たりが無い場合は、このメールを無視してください。",
-  "If you did not receive the email": "メールが届かなかった場合",
-  "If you did not request a password reset, no further action is required.": "パスワードのリセットにお心当たりが無い場合は、このメールを無視してください。",
-  "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:actionURL](:actionURL)": "\":actionText\" ボタンが機能しない場合は, 次のURLをコピーしてWebブラウザに貼り付けてください。[:actionURL](:actionURL)",
-  "Login": "ログイン",
-  "Logout": "ログアウト",
-  "Name": "氏名",
-  "Oh no": "オーノー",
-  "Page Expired": "期限切れのページ",
-  "Page Not Found": "ページが見つかりません",
-  "Password": "パスワード",
-  "Please click the button below to verify your email address.": "メールアドレスを確認するには、下のボタンをクリックしてください。",
-  "Regards": "よろしくお願いします",
-  "Register": "アカウント作成",
-  "Remember Me": "ログイン状態を保持する",
-  "Reset Password": "パスワードリセット",
-  "Reset Password Notification": "パスワードリセット通知",
-  "Send Password Reset Link": "パスワードリセットリンクを送信",
-  "Service Unavailable": "サービスは利用できません",
-  "Sorry, you are forbidden from accessing this page.": "申し訳ありません、このページへのアクセスは禁止されています。",
-  "Sorry, the page you are looking for could not be found.": "申し訳ありません、探しているページは見つかりませんでした。",
-  "Sorry, you are making too many requests to our servers.": "申し訳ありません、一定時間内のリクエスト上限回数を超えました。",
-  "Sorry, you are not authorized to access this page.": "申し訳ありません、このページにアクセスする権限がありません。",
-  "Sorry, your session has expired. Please refresh and try again.": "申し訳ありません、セッションは期限切れです。更新してもう一度やり直してください。",
-  "Sorry, we are doing some maintenance. Please check back soon.": "申し訳ありません、メンテナンス中です。あとでもう一度確認してください。",
-  "Toggle navigation": "ナビゲーションを切り替える",
-  "Too Many Requests": "大量のリクエストがありました",
-  "Unauthorized": "認証が必要です",
-  "Verify Email Address": "メールアドレスを確認",
-  "Verify Your Email Address": "メールアドレスを確認してください",
-  "You are receiving this email because we received a password reset request for your account.": "パスワードリセットのリクエストを受け付けました。",
-  "Whoops!": "おっと！",
-  "Whoops, something went wrong on our servers.": "おっと、サーバーで何か問題が発生しました。",
-  "BookCores - La teva llibreria": "BookCores - あなたの本屋",
-    "Idioma": "言語",
-    "Dashboard": "ダッシュボード",
+    "Panell de Gestió": "ダッシュボード",
+    "Profile": "プロフィール",
+    "Log Out": "ログアウト",
+    "El teu espai - BookCores": "あなたのスペース - BookCores",
+    "BIBLIOTECA": "ライブラリ",
+    "Cerca": "検索",
+    "La teva cistella": "カート",
+    "Hola,": "こんにちは、",
+    "El meu perfil": "マイプロフィール",
+    "Tancar sessió": "ログアウト",
     "Inicia sessió": "ログイン",
     "Registra't": "登録",
-    "Troba la teva pròxima": "次の",
-    "història preferida": "お気に入りの物語を見つける",
-    "Explora el nostre catàleg, llegeix ressenyes de la comunitat i troba les millors històries seleccionades per a tu a BookCores.": "カタログを探索し、コミュニティのレビューを読み、BookCoresであなたのために選ばれた最高の物語を見つけてください。",
-    "Veure catàleg": "カタログを見る",
-    "Saber-ne més": "もっと詳しく",
-    "Els més ben valorats ⭐": "最高評価 ⭐",
-    "Llibres amb les millors ressenyes de la comunitat": "コミュニティで最高のレビューを獲得した本",
-    "Veure tot": "すべて見る",
-    "Autor Desconegut": "作者不明",
-    "Afegir al carretó": "カートに追加",
-    "Encara no hi ha llibres": "まだ本がありません",
-    "Sembla que la base de dades està buida. Executa els seeders per veure contingut aquí.": "データベースが空のようです。コンテンツを表示するにはseederを実行してください。",
-    "Sobre nosaltres": "私たちについて",
+    "Tendències ara mateix": "今、流行っています",
+    "Recomanats per a tu": "あなたへのおすすめ",
+    "No hi ha llibres disponibles.": "利用可能な本はありません。",
     "Contacte": "お問い合わせ",
-    "Política de Privacitat": "プライバシーポリシー",
-    "Tots els drets reservats.": "全著作権所有。"
+    "Segueix-nos": "フォローする",
+    "Avís Legal": "法的通知",
+    "Cookies": "クッキー",
+    "La meva biblioteca": "マイライブラリ",
+    "TORNAR AL CATÀLEG": "カタログに戻る",
+    "Busca els teus llibres...": "本を検索...",
+    "Veure fitxa": "詳細を見る",
+    "Llegir ara": "今すぐ読む",
+    "No s'han trobat llibres amb aquesta cerca.": "この検索条件に一致する本は見つかりませんでした。",
+    "La teva biblioteca està buida": "ライブラリは空です",
+    "Esborrar cerca": "検索をクリア",
+    "Sembla que encara no has comprat cap llibre. Explora el catàleg per començar la teva col·lecció!": "まだ本を購入していないようです。カタログを見てコレクションを始めましょう！",
+    "Explorar el catàleg": "カタログを見る",
+    "La teva llibreria digital.": "あなたのデジタル書店。",
+    
+    "Llibre": "本",
+    "Autor": "著者",
+    "Editorial": "出版社",
+    "Tag / Gènere": "タグ / ジャンル",
+    "Tag": "タグ",
+    "Afegir": "追加",
+    "Tag no trobat (Prova un altre gènere o autor)": "タグが見つかりません（別のジャンルや著者を試してください）",
+    "S'han trobat": "見つかりました",
+    "resultats": "件の結果",
+    "Cercant...": "検索中...",
+    "Ordenar:": "並び替え:",
+    "Coincidència Exacta": "完全一致",
+    "No s'han trobat llibres": "本が見つかりません",
+    "Prova de canviar els filtres, revisar l'ortografia o utilitzar termes més generals.": "フィルターを変更するか、スペルを確認するか、より一般的な用語を使用してみてください。",
+    "Escriu el títol del llibre...": "本のタイトルを入力...",
+    "Busca un autor...": "著者を検索...",
+    "Busca una editorial...": "出版社を検索...",
+    "Escriu un gènere i prem Enter...": "ジャンルを入力してEnterキーを押してください...",
+    
+    "Millor Valorants": "高評価順",
+    "Preu: Baix a Alt": "価格: 安い順",
+    "Preu: Alt a Baix": "価格: 高い順",
+    "Més recents": "新着順",
+    
+    "Tornar enrere": "戻る",
+    "Tornar a la cerca": "検索に戻る",
+    "Tornar al catàleg": "カタログに戻る",
+    "Afegir a la cistella": "カートに追加",
+    "Afegir a la Cistella": "カートに追加",
+    "Inicia sessió per comprar": "購入するにはログインしてください",
+    "Login per comprar": "購入するにはログイン",
+    "per": "著者:",
+    "General": "一般",
+    "Autor Desconegut": "不明な著者",
+    "Sinopsi": "あらすじ",
+    "Data": "日付",
+    "Preu": "価格",
+    
+    "Valoracions i Ressenyes": "評価とレビュー",
+    "Comunitat de lectors": "読者コミュニティ",
+    "Encara no hi ha ressenyes per aquest llibre.": "この本のレビューはまだありません。",
+    "Escriu la teva opinió": "レビューを書く",
+    "Publicar una ressenya": "レビューを投稿",
+    "Puntuació": "評価",
+    "Comentari": "コメント",
+    "Què t'ha semblat aquest llibre?": "この本はどうでしたか？",
+    "Què t'ha semblat?": "どうでしたか？",
+    "Publicar ressenya": "レビューを投稿",
+    "Publicar": "投稿",
+    "Vols deixar la teva opinió?": "レビューを残しますか？",
+    "Vols participar?": "参加しますか？",
+    "Inicia sessió per escriure una ressenya": "レビューを書くにはログインしてください",
+    
+    "Contestar": "返信",
+    "Escriu resposta...": "返信を書く...",
+    "Enviar": "送信",
+    "Login": "ログイン",
+    "per contestar.": "して返信する。",
+    
+    "Excel·lent": "素晴らしい",
+    "Molt bo": "とても良い",
+    "Correcte": "良い",
+    "Regular": "普通",
+    "Dolent": "悪い",
+
+    "Troba la teva": "あなたの",
+    "història preferida": "お気に入りの物語を見つけよう",
+    "Explora el nostre catàleg i descobreix mons nous.": "カタログを探索して、新しい世界を発見しましょう。",
+    "Veure catàleg": "カタログを見る",
+    "La teva llibreria": "あなたの書店",
+
+    "El Ressò de les Cendres": "灰の残響",
+    "Una història èpica on les cendres dels dracs antics amaguen un secret que podria canviar el món per sempre.": "古代のドラゴンの灰が世界を永遠に変える秘密を隠している壮大な物語。",
+    "L'Ombra del Bosc": "森の影",
+    "Un thriller verd que t'atraparà des de la primera pàgina. Què s'amaga darrere dels arbres mil·lenaris?": "最初のページからあなたを虜にするグリーン・スリラー。千年の樹木の背後には何が隠されているのか？",
+    "Navegant entre Estrelles": "星々の間を航海して",
+    "Un viatge espacial sense retorn. La humanitat busca una nova llar, però l'univers és més hostil del que pensaven.": "後戻りできない宇宙の旅。人類は新しい家を探しているが、宇宙は彼らが思っていたよりも敵対的だ。",
+    "La Ciutat de Vidre": "ガラスの都市",
+    "Una ciutat invisible als ulls dels humans.": "人間の目には見えない都市。",
+    "Codi Infinit": "無限コード",
+    "Apreneu els secrets dels algorismes moderns.": "現代アルゴリズムの秘密を学ぶ。",
+    "Amor a la Toscana": "トスカーナの恋",
+    "Un estiu que canviarà la vida de la protagonista.": "主人公の人生を変える夏。",
+    "L'Enigma del Far": "灯台の謎",
+    "Ningú sap qui va encendre el far aquella nit.": "その夜、誰が灯台に火を灯したのか誰も知らない。",
+    "Revolució Digital": "デジタル革命",
+    "Com la IA està transformant la societat.": "AIがどのように社会を変革しているか。",
+    "El Secret dels Templers": "テンプル騎士団の秘密",
+    "Una aventura a través de l'edat mitjana.": "中世を通じた冒険。",
+    "Cuina per a Dummies": "サルでもわかる料理",
+    "Receptes fàcils per a tothom.": "誰でもできる簡単なレシピ。",
+    "Viatge al Centre de la Ment": "心の中心への旅",
+    "Entenent com pensem i sentim.": "私たちがどのように考え、感じるかを理解する。",
+    "Les Ombres de Barcelona": "バルセロナの影",
+    "Un assassí en sèrie camina per les Rambles.": "ランブラス通りを歩く連続殺人犯。",
+    "Dracs i Masmorres: Guia": "ダンジョンズ＆ドラゴンズ：ガイド",
+    "El manual definitiu per a mestres del calabós.": "ダンジョンマスターのための決定版マニュアル。",
+    "PHP per a Experts": "エキスパートのためのPHP",
+    "Domina Laravel i el desenvolupament web.": "LaravelとWeb開発をマスターする。",
+    "Poemes de Tardor": "秋の詩",
+    "Versos melancòlics per llegir amb cafè.": "コーヒーと一緒に読むメランコリックな詩。",
+    "La Guerra dels Xips": "チップ戦争",
+    "Quan els ordinadors prenen el control.": "コンピュータが支配権を握るとき。",
+    "Assassinat al Tren": "列車内の殺人",
+    "Un clàssic reinventat.": "再構築された古典。",
+    "La Història de Catalunya": "カタルーニャの歴史",
+    "Des de Guifré el Pilós fins avui.": "ギフレ多毛伯から今日まで。",
+    "Disseny Web Modern": "モダンWebデザイン",
+    "Aprèn Tailwind i AlpineJS.": "TailwindとAlpineJSを学ぶ。",
+    "El Jardí Oblidat": "忘れられた庭",
+    "Flors que parlen i arbres que caminen.": "花が話し、木が歩く。",
+    "Intel·ligència Artificial": "人工知能",
+    "Ètica i futur de la IA.": "AIの倫理と未来。",
+    "Riu Avall": "川下り",
+    "Descens en caiac pel riu més perillós.": "最も危険な川でのカヤック降下。",
+    "El Darrer Alè": "最後の息",
+    "No podràs dormir després de llegir-lo.": "読んだ後は眠れなくなる。",
+
+    "Fantasia": "ファンタジー",
+    "Misteri": "ミステリー",
+    "Ciència-Ficció": "SF",
+    "Informàtica": "コンピュータ",
+    "Romàntica": "ロマンス",
+    "Tecnologia": "テクノロジー",
+    "Històrica": "歴史",
+    "Cuina": "料理",
+    "Psicologia": "心理学",
+    "Thriller": "スリラー",
+    "Fantasia, Rol": "ファンタジー、RPG",
+    "Poesia": "詩",
+    "Ciència": "科学",
+    "Aventures": "冒険",
+    "Terror": "ホラー"
 }
