--- a/lang/ja.json
+++ b/lang/ja.json
@@ -162,5 +162,60 @@
     "Poesia": "詩",
     "Ciència": "科学",
     "Aventures": "冒険",
-    "Terror": "ホラー"
+    "Terror": "ホラー",
+
+    
+    "Profile Information": "プロフィール情報",
+    "Update your account's profile information and email address.": "アカウントのプロフィール情報とメールアドレスを更新します。",
+    "Name": "名前",
+    "Email": "メールアドレス",
+    "Unverified Email": "未確認のメールアドレス",
+    "Your email address is unverified.": "メールアドレスが確認されていません。",
+    "Click here to re-send the verification email.": "ここをクリックして確認メールを再送信してください。",
+    "A new verification link has been sent to your email address.": "新しい確認リンクがメールアドレスに送信されました。",
+    "Save": "保存",
+    "Saved.": "保存しました。",
+    "Update Password": "パスワードの更新",
+    "Ensure your account is using a long, random password to stay secure.": "アカウントを安全に保つために、長くランダムなパスワードを使用してください。",
+    "Current Password": "現在のパスワード",
+    "New Password": "新しいパスワード",
+    "Confirm Password": "パスワード（確認）",
+    "Delete Account": "アカウントの削除",
+    "Once your account is deleted, all of its resources and data will be permanently deleted.": "アカウントが削除されると、すべてのリソースとデータが完全に削除されます。",
+    "Are you sure you want to delete your account?": "本当にアカウントを削除しますか？",
+    "Before deleting your account, please download any data or information that you wish to retain.": "アカウントを削除する前に、保持したいデータや情報をダウンロードしてください。",
+    "Please enter your password to confirm you would like to permanently delete your account.": "アカウントを完全に削除することを確認するために、パスワードを入力してください。",
+    "Password": "パスワード",
+    "Cancel": "キャンセル",
+    "Log Out": "ログアウト",
+
+    "El meu Perfil": "マイプロフィール",
+    "Tornar a l'Inici": "ホームに戻る",
+    "Anar a l'Inici": "ホームへ移動",
+    "BIBLIOTECA": "ライブラリ",
+    "Cerca": "検索",
+    "La teva cistella": "カート",
+    "Hola,": "こんにちは、",
+    "Tancar sessió": "ログアウト",
+    "La meva Biblioteca": "マイライブラリ",
+    "La teva biblioteca està buida": "ライブラリは空です",
+    "Sembla que encara no has comprat cap llibre.": "まだ本を購入していないようです。",
+    "Explorar llibres": "本を探す",
+    "Veure Detalls": "詳細を見る",
+    "Llegir Ara": "今すぐ読む",
+    "Autor desconegut": "不明な著者",
+    "Afegir a la Cistella": "カートに追加",
+    "Login per comprar": "購入するにはログイン",
+    "Preu": "価格",
+    "Comunitat de lectors": "読者コミュニティ",
+    "Publicar una ressenya": "レビューを投稿",
+    "Puntuació": "評価",
+    "Publicar": "投稿",
+    "Vols participar?": "参加しますか？",
+    "Inicia sessió": "ログイン",
+    "Contestar": "返信",
+    "Enviar": "送信",
+    "Login": "ログイン",
+    "per contestar.": "返信するために。"
+
 }
