--- a/lang/en.json
+++ b/lang/en.json
@@ -3,13 +3,7 @@
     "Profile": "Profile",
     "Log Out": "Log Out",
     "El teu espai - BookCores": "Your Space - BookCores",
-    "BIBLIOTECA": "LIBRARY",
-    "Cerca": "Search",
-    "La teva cistella": "Your Cart",
-    "Hola,": "Hello,",
     "El meu perfil": "My Profile",
-    "Tancar sessió": "Log Out",
-    "Inicia sessió": "Log In",
     "Registra't": "Sign Up",
     "Tendències ara mateix": "Trending Now",
     "Recomanats per a tu": "Recommended for You",
@@ -24,7 +18,6 @@
     "Veure fitxa": "View Details",
     "Llegir ara": "Read Now",
     "No s'han trobat llibres amb aquesta cerca.": "No books found matching this search.",
-    "La teva biblioteca està buida": "Your library is empty",
     "Esborrar cerca": "Clear search",
     "Sembla que encara no has comprat cap llibre. Explora el catàleg per començar la teva col·lecció!": "It seems you haven't purchased any books yet. Explore the catalog to start your collection!",
     "Explorar el catàleg": "Explore the Catalog",
@@ -51,27 +44,11 @@
     "Preu: Baix a Alt": "Price: Low to High",
     "Preu: Alt a Baix": "Price: High to Low",
     "Més recents": "Newest",
-    "Autor Desconegut": "Unknown Author",
 
     "Tornar a la cerca": "Back to search",
     "Tornar al catàleg": "Back to catalog",
     "General": "General",
     "Autor Desconegut": "Unknown Author",
-    "Preu": "Price",
-    "Afegir a la Cistella": "Add to Cart",
-    "Login per comprar": "Log in to buy",
-    "Comunitat de lectors": "Reader Community",
-    "Publicar una ressenya": "Post a review",
-    "Puntuació": "Rating",
-    "Què t'ha semblat?": "What did you think?",
-    "Publicar": "Post",
-    "Vols participar?": "Want to participate?",
-    "Inicia sessió": "Log In",
-    "Contestar": "Reply",
-    "Escriu resposta...": "Write a reply...",
-    "Enviar": "Send",
-    "Login": "Log In",
-    "per contestar.": "to reply.",
 
     "El Ressò de les Cendres": "The Echo of Ashes",
     "Una història èpica on les cendres dels dracs antics amaguen un secret que podria canviar el món per sempre.": "An epic story where the ashes of ancient dragons hide a secret that could change the world forever.",
@@ -170,6 +147,7 @@
     "Contestar": "Reply",
     "Enviar": "Send",
     "Login": "Login",
-    "per contestar.": "to reply."
+    "per contestar.": "to reply.",
+    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain."
 
 }
