--- a/lang/es.json
+++ b/lang/es.json
@@ -1,15 +1,7 @@
 {
     "Panell de Gestió": "Panel de Gestión",
     "Profile": "Perfil",
-    "Log Out": "Cerrar sesión",
     "El teu espai - BookCores": "Tu espacio - BookCores",
-    "BIBLIOTECA": "BIBLIOTECA",
-    "Cerca": "Buscar",
-    "La teva cistella": "Tu cesta",
-    "Hola,": "Hola,",
-    "El meu perfil": "Mi perfil",
-    "Tancar sessió": "Cerrar sesión",
-    "Inicia sessió": "Iniciar sesión",
     "Registra't": "Regístrate",
     "Tendències ara mateix": "Tendencias ahora mismo",
     "Recomanats per a tu": "Recomendados para ti",
@@ -24,7 +16,6 @@
     "Veure fitxa": "Ver ficha",
     "Llegir ara": "Leer ahora",
     "No s'han trobat llibres amb aquesta cerca.": "No se han encontrado libros con esta búsqueda.",
-    "La teva biblioteca està buida": "Tu biblioteca está vacía",
     "Esborrar cerca": "Borrar búsqueda",
     "Sembla que encara no has comprat cap llibre. Explora el catàleg per començar la teva col·lecció!": "Parece que aún no has comprado ningún libro. ¡Explora el catálogo para empezar tu colección!",
     "Explorar el catàleg": "Explorar el catálogo",
@@ -51,28 +42,14 @@
     "Preu: Baix a Alt": "Precio: Bajo a Alto",
     "Preu: Alt a Baix": "Precio: Alto a Bajo",
     "Més recents": "Más recientes",
-    "Autor Desconegut": "Autor Desconocido",
+   
 
     "Tornar a la cerca": "Volver a la búsqueda",
     "Tornar al catàleg": "Volver al catálogo",
     "General": "General",
     "Autor Desconegut": "Autor Desconocido",
-    "Preu": "Precio",
-    "Afegir a la Cistella": "Añadir a la Cesta",
-    "Login per comprar": "Inicia sesión para comprar",
-    "Comunitat de lectors": "Comunidad de lectores",
-    "Publicar una ressenya": "Publicar una reseña",
-    "Puntuació": "Puntuación",
     "Què t'ha semblat?": "¿Qué te ha parecido?",
-    "Publicar": "Publicar",
-    "Vols participar?": "¿Quieres participar?",
-    "Inicia sessió": "Iniciar sesión",
-    "Contestar": "Responder",
     "Escriu resposta...": "Escribe una respuesta...",
-    "Enviar": "Enviar",
-    "Login": "Iniciar sesión",
-    "per contestar.": "para responder.",
-
     "El Ressò de les Cendres": "El Eco de las Cenizas",
     "Una història èpica on les cendres dels dracs antics amaguen un secret que podria canviar el món per sempre.": "Una historia épica donde las cenizas de los dragones antiguos esconden un secreto que podría cambiar el mundo para siempre.",
     "L'Ombra del Bosc": "La Sombra del Bosque",
@@ -140,5 +117,59 @@
     "Poesia": "Poesía",
     "Ciència": "Ciencia",
     "Aventures": "Aventuras",
-    "Terror": "Terror"
+    "Terror": "Terror",
+    
+
+    "Profile Information": "Información del perfil",
+    "Update your account's profile information and email address.": "Actualiza la información de tu perfil y correo electrónico.",
+    "Name": "Nombre",
+    "Email": "Correo electrónico",
+    "Your email address is unverified.": "Tu correo no está verificado.",
+    "Click here to re-send the verification email.": "Haz clic aquí para reenviar la verificación.",
+    "A new verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación.",
+    "Save": "Guardar",
+    "Saved.": "Guardado.",
+    "Update Password": "Actualizar contraseña",
+    "Ensure your account is using a long, random password to stay secure.": "Asegúrate de usar una contraseña larga y segura.",
+    "Current Password": "Contraseña actual",
+    "New Password": "Nueva contraseña",
+    "Confirm Password": "Confirmar contraseña",
+    "Delete Account": "Borrar cuenta",
+    "Once your account is deleted, all of its resources and data will be permanently deleted.": "Una vez borrada la cuenta, todos los datos se eliminarán permanentemente.",
+    "Are you sure you want to delete your account?": "¿Seguro que quieres borrar tu cuenta?",
+    "Before deleting your account, please download any data or information that you wish to retain.": "Antes de borrar, descarga los datos que quieras conservar.",
+    "Please enter your password to confirm you would like to permanently delete your account.": "Introduce tu contraseña para confirmar.",
+    "Password": "Contraseña",
+    "Cancel": "Cancelar",
+    "Log Out": "Cerrar sesión",
+
+    "El meu Perfil": "Mi Perfil",
+    "Tornar a l'Inici": "Volver al Inicio",
+    "Anar a l'Inici": "Ir al Inicio",
+    "BIBLIOTECA": "BIBLIOTECA",
+    "Cerca": "Buscar",
+    "La teva cistella": "Tu cesta",
+    "Hola,": "Hola,",
+    "Tancar sessió": "Cerrar sesión",
+    "La meva Biblioteca": "Mi Biblioteca",
+    "La teva biblioteca està buida": "Tu biblioteca está vacía",
+    "Sembla que encara no has comprat cap llibre.": "Parece que aún no has comprado libros.",
+    "Explorar llibres": "Explorar libros",
+    "Veure Detalls": "Ver Detalles",
+    "Llegir Ara": "Leer Ahora",
+    "Autor desconegut": "Autor desconocido",
+    "Afegir a la Cistella": "Añadir a la Cesta",
+    "Login per comprar": "Inicia sesión para comprar",
+    "Preu": "Precio",
+    "Comunitat de lectors": "Comunidad de lectores",
+    "Publicar una ressenya": "Publicar una reseña",
+    "Puntuació": "Puntuación",
+    "Publicar": "Publicar",
+    "Vols participar?": "¿Quieres participar?",
+    "Inicia sessió": "Inicia sesión",
+    "Contestar": "Contestar",
+    "Enviar": "Enviar",
+    "Login": "Login",
+    "per contestar.": "para contestar."
+
 }
