--- a/lang/ja.json
+++ b/lang/ja.json
@@ -1,15 +1,8 @@
 {
     "Panell de Gestió": "ダッシュボード",
     "Profile": "プロフィール",
-    "Log Out": "ログアウト",
     "El teu espai - BookCores": "あなたのスペース - BookCores",
-    "BIBLIOTECA": "ライブラリ",
-    "Cerca": "検索",
-    "La teva cistella": "カート",
-    "Hola,": "こんにちは、",
     "El meu perfil": "マイプロフィール",
-    "Tancar sessió": "ログアウト",
-    "Inicia sessió": "ログイン",
     "Registra't": "登録",
     "Tendències ara mateix": "今、流行っています",
     "Recomanats per a tu": "あなたへのおすすめ",
@@ -24,7 +17,6 @@
     "Veure fitxa": "詳細を見る",
     "Llegir ara": "今すぐ読む",
     "No s'han trobat llibres amb aquesta cerca.": "この検索条件に一致する本は見つかりませんでした。",
-    "La teva biblioteca està buida": "ライブラリは空です",
     "Esborrar cerca": "検索をクリア",
     "Sembla que encara no has comprat cap llibre. Explora el catàleg per començar la teva col·lecció!": "まだ本を購入していないようです。カタログを見てコレクションを始めましょう！",
     "Explorar el catàleg": "カタログを見る",
@@ -58,37 +50,24 @@
     "Tornar a la cerca": "検索に戻る",
     "Tornar al catàleg": "カタログに戻る",
     "Afegir a la cistella": "カートに追加",
-    "Afegir a la Cistella": "カートに追加",
     "Inicia sessió per comprar": "購入するにはログインしてください",
-    "Login per comprar": "購入するにはログイン",
     "per": "著者:",
     "General": "一般",
     "Autor Desconegut": "不明な著者",
     "Sinopsi": "あらすじ",
     "Data": "日付",
-    "Preu": "価格",
     
     "Valoracions i Ressenyes": "評価とレビュー",
-    "Comunitat de lectors": "読者コミュニティ",
     "Encara no hi ha ressenyes per aquest llibre.": "この本のレビューはまだありません。",
     "Escriu la teva opinió": "レビューを書く",
-    "Publicar una ressenya": "レビューを投稿",
-    "Puntuació": "評価",
     "Comentari": "コメント",
     "Què t'ha semblat aquest llibre?": "この本はどうでしたか？",
     "Què t'ha semblat?": "どうでしたか？",
     "Publicar ressenya": "レビューを投稿",
-    "Publicar": "投稿",
     "Vols deixar la teva opinió?": "レビューを残しますか？",
-    "Vols participar?": "参加しますか？",
     "Inicia sessió per escriure una ressenya": "レビューを書くにはログインしてください",
     
-    "Contestar": "返信",
     "Escriu resposta...": "返信を書く...",
-    "Enviar": "送信",
-    "Login": "ログイン",
-    "per contestar.": "して返信する。",
-    
     "Excel·lent": "素晴らしい",
     "Molt bo": "とても良い",
     "Correcte": "良い",
@@ -216,6 +195,7 @@
     "Contestar": "返信",
     "Enviar": "送信",
     "Login": "ログイン",
-    "per contestar.": "返信するために。"
+    "per contestar.": "返信するために。",
+    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "アカウントが削除されると、すべてのリソースとデータが完全に削除されます。アカウントを削除する前に、保持したいデータや情報をダウンロードしてください。"
 
 }
