cistella final teoricament

--- a/lang/ca.json
+++ b/lang/ca.json
@@ -190,6 +190,31 @@
     "La teva cistella": "La teva cistella",
     "Tancar sessió": "Tancar sessió",
     "La meva Biblioteca": "La meva Biblioteca",
-    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Un cop esborrat el compte, tots els seus recursos i dades s'eliminaran permanentment. Abans d'esborrar el compte, si us plau descarrega qualsevol dada o informació que vulguis conservar."
+    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Un cop esborrat el compte, tots els seus recursos i dades s'eliminaran permanentment. Abans d'esborrar el compte, si us plau descarrega qualsevol dada o informació que vulguis conservar.",
 
+    "Cistella": "Cistella",
+    "Articles": "Articles",
+    "Unitat:": "Unitat:",
+    "Eliminar": "Eliminar",
+    "Resum de la comanda": "Resum de la comanda",
+    "Subtotal": "Subtotal",
+    "Impostos": "Impostos",
+    "Total a pagar": "Total a pagar",
+    "Tramitar comanda": "Tramitar comanda",
+    "Pagament 100% segur amb Stripe": "Pagament 100% segur amb Stripe",
+    "Lector": "Lector",
+    "Membre des de": "Membre des de",
+    "El teu estat": "El teu estat",
+    "Tens tot al dia! Continua explorant el catàleg per trobar la teva propera lectura.": "Tens tot al dia! Continua explorant el catàleg per trobar la teva propera lectura.",
+    "Explorar Llibres": "Explorar Llibres",
+    "Guardar canvis": "Guardar canvis",
+    "Informació del perfil": "Informació del perfil",
+    "Actualitza la informació del teu compte i l'adreça de correu electrònic.": "Actualitza la informació del teu compte i l'adreça de correu electrònic.",
+    "Actualitzar contrasenya": "Actualitzar contrasenya",
+    "Assegura't que el teu compte utilitza una contrasenya llarga i segura.": "Assegura't que el teu compte utilitza una contrasenya llarga i segura.",
+    "Esborrar compte": "Esborrar compte",
+    "Un cop esborrat el compte, totes les dades i recursos s'eliminaran permanentment. Si us plau, descarrega qualsevol dada que vulguis conservar abans de procedir.": "Un cop esborrat el compte, totes les dades i recursos s'eliminaran permanentment. Si us plau, descarrega qualsevol dada que vulguis conservar abans de procedir.",
+    "Estàs segur?": "Estàs segur?",
+    "Un cop esborrat el compte, totes les dades s'eliminaran permanentment. Introdueix la teva contrasenya per confirmar que vols esborrar el compte de forma definitiva.": "Un cop esborrat el compte, totes les dades s'eliminaran permanentment. Introdueix la teva contrasenya per confirmar que vols esborrar el compte de forma definitiva.",
+    "Cancel·lar": "Cancel·lar"
 }
