--- a/lang/es.json
+++ b/lang/es.json
@@ -170,6 +170,7 @@
     "Contestar": "Contestar",
     "Enviar": "Enviar",
     "Login": "Login",
-    "per contestar.": "para contestar."
+    "per contestar.": "para contestar.",
+    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Una vez eliminada la cuenta, todos sus recursos y datos se eliminarán permanentemente. Antes de eliminar tu cuenta, descarga cualquier dato o información que desees conservar."
 
 }
