--- a/lang/ca.json
+++ b/lang/ca.json
@@ -216,5 +216,6 @@
     "Un cop esborrat el compte, totes les dades i recursos s'eliminaran permanentment. Si us plau, descarrega qualsevol dada que vulguis conservar abans de procedir.": "Un cop esborrat el compte, totes les dades i recursos s'eliminaran permanentment. Si us plau, descarrega qualsevol dada que vulguis conservar abans de procedir.",
     "Estàs segur?": "Estàs segur?",
     "Un cop esborrat el compte, totes les dades s'eliminaran permanentment. Introdueix la teva contrasenya per confirmar que vols esborrar el compte de forma definitiva.": "Un cop esborrat el compte, totes les dades s'eliminaran permanentment. Introdueix la teva contrasenya per confirmar que vols esborrar el compte de forma definitiva.",
-    "Cancel·lar": "Cancel·lar"
+    "Cancel·lar": "Cancel·lar",
+    "Zona Admin": "Zona Admin"
 }
