--- a/lang/en.json
+++ b/lang/en.json
@@ -174,6 +174,7 @@
     "Un cop esborrat el compte, totes les dades i recursos s'eliminaran permanentment. Si us plau, descarrega qualsevol dada que vulguis conservar abans de procedir.": "Once your account is deleted, all of its resources and data will be permanently deleted. Please download any data or information that you wish to retain.",
     "Estàs segur?": "Are you sure?",
     "Un cop esborrat el compte, totes les dades s'eliminaran permanentment. Introdueix la teva contrasenya per confirmar que vols esborrar el compte de forma definitiva.": "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.",
-    "Cancel·lar": "Cancel"
+    "Cancel·lar": "Cancel",
+    "Zona Admin": "Admin Zone"
 
 }
