--- a/lang/ja.json
+++ b/lang/ja.json
@@ -222,6 +222,7 @@
     "Un cop esborrat el compte, totes les dades i recursos s'eliminaran permanentment. Si us plau, descarrega qualsevol dada que vulguis conservar abans de procedir.": "アカウントが削除されると、すべてのリソースとデータが完全に削除されます。保持したいデータや情報をダウンロードしてください。",
     "Estàs segur?": "本当によろしいですか？",
     "Un cop esborrat el compte, totes les dades s'eliminaran permanentment. Introdueix la teva contrasenya per confirmar que vols esborrar el compte de forma definitiva.": "アカウントが削除されると、すべてのリソースとデータが完全に削除されます。アカウントを完全に削除することを確認するためにパスワードを入力してください。",
-    "Cancel·lar": "キャンセル"
+    "Cancel·lar": "キャンセル",
+    "Zona Admin":"管理ゾーン"
 
 }
